--- a/assets/styles.css
+++ b/assets/styles.css
@@ -74,10 +74,12 @@ hr {
 }
 
 .plot {
-  margin: 22px 10px;
+  margin: 10px 11px;
   border: 1px solid black;
   background-color: #fffffa;
   padding: 5px 5px 5px 5px;
+  padding-left: 0px;
+  padding-right: 0px;
   /* height: 400px; */
   height: 50vw;
   max-height: 400px;
@@ -131,6 +133,12 @@ hr {
   100% {opacity:1;}
 }
 
-.row {
-  background-color: #F2F8FF;
+.col-xl-8, .col-xl-4 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.main-plot-header-col {
+  padding-left: 10px;
+  padding-right: 10px;
 }
